sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/RepeatStatement.sand
pub class RepeatStatement {
    foo() {
        repeat n {

        }

        repeat n {
            a = b;
        }
    }
}