sandc/test/fixtures/astRegression/shouldFail/productions/blockPseudex/BlockExpressionInPlaceOfBlockPseudex.sand
pub class BlockExpressionInPlaceOfBlockPseudex {
    foo() {
        let a = {
            b
        };
    }
}